<?xml version="1.0" encoding="utf-8"?>

<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:columnCount="3"
        android:orientation="horizontal"
        android:rowCount="4">

        <Button
            android:id="@+id/btn_1"
            style="@style/Keyboard"
            android:layout_margin="10dp"
            android:background="@drawable/custom_button"
            android:onClick="onClick"
            android:text="@string/_1"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btn_2"
            style="@style/Keyboard"
            android:layout_margin="10dp"
            android:background="@drawable/custom_button"
            android:text="@string/_2"
            android:textColor="@color/colorPrimary"/>

        <Button
            android:id="@+id/btn_3"
            style="@style/Keyboard"
            android:layout_margin="10dp"
            android:background="@drawable/custom_button"
            android:text="@string/_3"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btn_4"
            style="@style/Keyboard"
            android:layout_margin="10dp"
            android:background="@drawable/custom_button"
            android:text="@string/_4"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btn_5"
            style="@style/Keyboard"
            android:layout_margin="10dp"
            android:background="@drawable/custom_button"
            android:text="@string/_5"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btn_6"
            style="@style/Keyboard"
            android:layout_margin="10dp"
            android:background="@drawable/custom_button"
            android:text="@string/_6"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btn_7"
            style="@style/Keyboard"
            android:layout_margin="10dp"
            android:background="@drawable/custom_button"
            android:text="@string/_7"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btn_8"
            style="@style/Keyboard"
            android:layout_margin="10dp"
            android:background="@drawable/custom_button"
            android:text="@string/_8"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btn_9"
            style="@style/Keyboard"
            android:layout_margin="10dp"
            android:background="@drawable/custom_button"
            android:text="@string/_9"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btn_."
            style="@style/Keyboard"
            android:layout_margin="10dp"
            android:background="@drawable/custom_button"
            android:text="@string/point"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btn_0"
            style="@style/Keyboard"
            android:layout_margin="10dp"
            android:background="@drawable/custom_button"
            android:text="@string/_0"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btn_del"
            style="@style/Keyboard"
            android:layout_margin="10dp"
            android:background="@drawable/custom_button"
            android:text="@string/del"
            android:textColor="@color/colorPrimary" />


    </GridLayout>

</layout>